dark-mode btn toggle fix,dark mode problem fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  @apply dark:text-gray-50;
+  /* @apply dark:text-gray-50; */
 }
 
 a {
